build: Add subprojects/dbus-gmain to AM_CPPFLAGS
This will be needed when updating gdbus-gmain in a subsequent commit.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -44,6 +44,7 @@ AM_CPPFLAGS = \
 	-include config.h \
 	-I$(top_srcdir)/include \
 	-I$(top_srcdir)/subprojects \
+	-I$(top_srcdir)/subprojects/dbus-gmain \
 	$(DBUS_CFLAGS) \
 	$(GLIB_CFLAGS) \
 	$(PYTHON_CPPFLAGS) \
