--- a/dbus-python.pc.in
+++ b/dbus-python.pc.in
@@ -1,3 +1,5 @@
+# Copyright 2006-2022 Collabora Ltd.
+# SPDX-License-Identifier: MIT
 # This file is currently Python-version-independent.
 prefix=@prefix@
 exec_prefix=@exec_prefix@
