setup.py: Build using Meson instead of Autotools by default
This requires mostly dropping support for Python 3.5 and 3.6, both of
which are EOL anyway.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -39,6 +39,8 @@ EXTRA_DIST = \
 	examples/unix-fd-service.py \
 	meson.build \
 	meson_options.txt \
+	pyproject.toml \
+	setup.cfg \
 	setup.py \
 	test/TestSuitePythonService.service.in \
 	test/compiled.test.in \
