meson: Make installed-tests from multiple builds co-installable
Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -16,6 +16,13 @@ option(
 )
 
 option(
+  'installed_tests_subdir',
+  type: 'string',
+  value: '',
+  description: 'Suffix to make installed-tests from multiple builds co-installable',
+)
+
+option(
   'python',
   type: 'string',
   value: '',
