--- a/test/meson.build
+++ b/test/meson.build
@@ -1,9 +1,9 @@
 # Copyright 2022 Collabora Ltd.
 # SPDX-License-Identifier: MIT
 
-installed_testdir = get_option('libexecdir') / 'installed-tests' / meson.project_name()
+installed_testdir = get_option('libexecdir') / 'installed-tests' / meson.project_name() / get_option('installed_tests_subdir')
 installed_test_testdir = installed_testdir / 'test'
-installed_test_metadir = get_option('datadir') / 'installed-tests' / meson.project_name()
+installed_test_metadir = get_option('datadir') / 'installed-tests' / meson.project_name() / get_option('installed_tests_subdir')
 test_env = environment()
 test_env.set('DBUS_TOP_SRCDIR', meson.project_source_root())
 test_env.set('DBUS_TOP_BUILDDIR', meson.project_build_root())
