build: Stop including egg-info in sdist
This seems to be obsolete when using PEP 517.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,11 @@
 .deps/
 .dirstamp
 .libs/
+/.eggs/
+/INSTALL
 /_autotools/
 /_meson-build/
 /_meson-source/
-/INSTALL
 /aclocal.m4
 /api/
 /autom4te.cache/
@@ -31,8 +32,8 @@
 /config.status
 /config.sub
 /configure
-/configure~
 /configure.ac~
+/configure~
 /dbus-python-*.tar.gz
 /dbus-python-*.tar.gz.asc
 /dbus-python.pc
