CI: Stop switching privilege levels, just do the build as uid 0
This avoids git complaining that the git repo's ownership was changed.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,16 +31,13 @@ before_script:
 
 variables:
   dbus_ci_configure_flags: ''
-  ci_in_docker: "yes"
   ci_parallel: "2"
-  ci_sudo: "yes"
   ci_distro: "debian"
   ci_suite: "bookworm"
 
 .common:
   script: &script
-    - chown -R user .
-    - runuser -u user -- env PATH="/home/user/.local/bin:/usr/lib/ccache:$PATH" ./tools/ci-build.sh $dbus_ci_configure_flags
+    - env PATH="$HOME/.local/bin:/usr/lib/ccache:$PATH" ./tools/ci-build.sh $dbus_ci_configure_flags
   artifacts: &artifacts
     paths:
       - _autotools/*.log
