CI: Temporarily force each CI job to re-clone the project directory
Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ variables:
   ci_parallel: "2"
   ci_distro: "debian"
   ci_suite: "bookworm"
+  GIT_STRATEGY: clone
 
 .common:
   script: &script
