--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,7 @@ variables:
   artifacts: &artifacts
     paths:
       - _autotools/*.log
+      - _meson-build/meson-logs
     when: always
 
 build:python3.7:
