CI: Use Ubuntu 22.04 'jammy' to test Python 3.10
python3.10 was removed from Debian bookworm before it was released as
Debian 12.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,18 +84,20 @@ build:python3.9-dbg:
 
 build:python3.10:
   stage: build
-  image: "debian:bookworm-slim"
+  image: "ubuntu:jammy"
   variables:
-    ci_suite: bookworm
+    ci_distro: ubuntu
+    ci_suite: jammy
     dbus_ci_system_python: python3.10
   script: *script
   artifacts: *artifacts
 
 build:python3.10-dbg:
   stage: build
-  image: "debian:bookworm-slim"
+  image: "ubuntu:jammy"
   variables:
-    ci_suite: bookworm
+    ci_distro: ubuntu
+    ci_suite: jammy
     dbus_ci_system_python: python3.10-dbg
     dbus_ci_system_python_module_suffix: -dbg
   script: *script
