CI: Test with Python 3.13 on Debian testing
This isn't considered a supported version in Debian yet, so we need
to build our own copy of PyGObject from source.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -150,4 +150,25 @@ build:python3.12-dbg:
   # assertion failure in import-repeatedly needs investigating
   when: manual
 
+build:python3.13:
+  stage: build
+  image: "debian:testing-slim"
+  variables:
+    ci_suite: testing
+    dbus_ci_system_python: python3.13
+  script: *script
+  artifacts: *artifacts
+
+build:python3.13-dbg:
+  stage: build
+  image: "debian:testing-slim"
+  variables:
+    ci_suite: testing
+    dbus_ci_system_python: python3.13-dbg
+    dbus_ci_system_python_module_suffix: ''
+  script: *script
+  artifacts: *artifacts
+  # assertion failure in import-repeatedly needs investigating
+  when: manual
+
 # vim:set sw=2 sts=2 et:
