--- a/meson_options.txt
+++ b/meson_options.txt
@@ -3,8 +3,9 @@
 
 option(
   'doc',
-  type: 'boolean',
-  value: false,
+  type: 'feature',
+  value: 'disabled',
+  deprecated: {'true': 'enabled', 'false': 'disabled'},
   description: 'Enable documentation',
 )
 
