build: Convert tests from a boolean into a feature
This allows the unit tests to be skipped automatically if dbus-run-session
was not found, or if the necessary development files for embedding a
Python interpreter were not found.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/meson.build
+++ b/meson.build
@@ -225,6 +225,11 @@ if sphinx_dep.found()
     subdir('doc')
 endif
 
-if get_option('tests')
+dbus_run_session = find_program(
+    'dbus-run-session',
+    required: get_option('tests'),
+)
+
+if dbus_run_session.found()
     subdir('test')
 endif
