build: If tests are explicitly enabled, require PyGI
Non-trivial test coverage requires PyGI.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/meson.build
+++ b/meson.build
@@ -229,6 +229,11 @@ dbus_run_session = find_program(
     'dbus-run-session',
     required: get_option('tests'),
 )
+gi_dep = py_mod.find_installation(
+    py.full_path(),
+    modules: ['gi'],
+    required: get_option('tests').enabled(),
+)
 
 if dbus_run_session.found()
     subdir('test')
