--- a/Makefile.am
+++ b/Makefile.am
@@ -53,6 +53,7 @@ EXTRA_DIST = \
 	tools/check-coding-style.mk \
 	tools/check-py-style.sh \
 	tools/check-whitespace.sh \
+	tools/dist.sh \
 	tools/generate-pkginfo.py \
 	$(NULL)
 
@@ -369,23 +370,8 @@ $(patsubst %,%.test,$(test_programs)): %.test: Makefile
 # === Documentation ===
 
 dist-hook:
-	echo $(VERSION) > $(distdir)/.version
-	$(MKDIR_P) $(distdir)/dbus_python.egg-info
-	touch $(distdir)/MANIFEST
-	touch $(distdir)/MANIFEST.in
-	touch $(distdir)/dbus_python.egg-info/SOURCES.txt
-	$(PYTHON) $(distdir)/tools/generate-pkginfo.py $(VERSION) $(distdir)/PKG-INFO
-	echo > $(distdir)/dbus_python.egg-info/dependency_links.txt
-	echo _dbus_bindings > $(distdir)/dbus_python.egg-info/top_level.txt
-	echo _dbus_glib_bindings >> $(distdir)/dbus_python.egg-info/top_level.txt
-	echo dbus >> $(distdir)/dbus_python.egg-info/top_level.txt
-	cp $(distdir)/PKG-INFO $(distdir)/dbus_python.egg-info/PKG-INFO
-	( cd $(distdir) && find -type d -o -print ) | \
-		LC_ALL=C sort | \
-		$(SED) -e 's|^\./||' \
-		> $(distdir)/MANIFEST
-	sed -e 's/.*/include &/' < $(distdir)/MANIFEST > $(distdir)/MANIFEST.in
-	cp $(distdir)/MANIFEST $(distdir)/dbus_python.egg-info/SOURCES.txt
+	MESON_PROJECT_DIST_ROOT="${distdir}" \
+	$(srcdir)/tools/dist.sh "${VERSION}" "${PYTHON}"
 
 maintainer-upload:
 	rsync -tvpP --chmod=ugo=r $(DIST_ARCHIVES) $(DIST_ARCHIVES:%=%.asc) \
