Use the project's PyPI name as the basename of the source release
As per https://peps.python.org/pep-0625/

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,7 @@ AC_PREREQ(2.59c)
 # SPDX-License-Identifier: MIT
 
 dnl Micro version is odd for non-releases
-AC_INIT([dbus-python], [1.4.1],
+AC_INIT([dbus_python], [1.4.1],
   [https://gitlab.freedesktop.org/dbus/dbus-python/-/issues/new])
 AC_CONFIG_MACRO_DIR([m4])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
