CI: Use debian/eol Docker image to test Python 3.9
This protects us from having CI fail after bullseye is moved from
deb.debian.org to archive.debian.org, expected to occur in mid 2026.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ variables:
 
 build:python3.9:
   stage: build
-  image: "debian:bullseye-slim"
+  image: "debian/eol:bullseye-slim"
   variables:
     ci_suite: bullseye
     dbus_ci_system_python: python3.9
@@ -61,7 +61,7 @@ build:python3.9:
 
 build:python3.9-dbg:
   stage: build
-  image: "debian:bullseye-slim"
+  image: "debian/eol:bullseye-slim"
   variables:
     ci_suite: bullseye
     dbus_ci_system_python: python3.9-dbg
